pgsql shared buffer 공부

--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -340,8 +340,9 @@ init_htab(HTAB *hashp, long nelem)
   - 버퍼 수 + NUM_BUFFER_PARTITIONS와 `fill factor`로 좀 더 넉넉한 수의 버킷 수를 계산한다. 기본값은 1로 결국 할당된 버퍼 수보다 바로 다음으로 큰 2의 지수 값을 버킷 수로 정한다
 - `최대 버킷 인덱스`: 인덱스가 0부터 시작함을 감안하여 계산한 `nbuckets`(계산된 버킷 수)의 -1을 한다
 - `세그먼트 수`:
-  - (최대 버킷 인덱스 $\div$ 세그먼트의 크기) + 1
-  - 그리고 최대 버킷 수를 세그먼트 사이즈로 나누고 +1을 하여 세그먼트의 개수를 구하고, 마찬가지로 공간을 넉넉하게 잡아두기 위해 그 다음으로 큰 2의 지수 값을 구한다
+  - 버킷이 몇 개의 세그먼트로 나뉠 수 있는지 계산
+    - (`최대 버킷 인덱스` $\div$ `세그먼트의 크기`) + 1
+  - 마찬가지로 공간을 넉넉하게 잡아두기 위해 그 다음으로 큰 2의 지수 값을 구한다
 - `버퍼 수`, `버킷 수`, `세그먼트 수`를 가지고 해시 테이블 공간을 잡는다
 
 ### 버퍼 파티션?
