--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -15,9 +15,9 @@ categories: [db, postgres]
   - [Shared Buffer 구조](#shared-buffer-구조)
     - [해시 테이블](#해시-테이블)
       - [해시 테이블 크기와 해시 세그먼트](#해시-테이블-크기와-해시-세그먼트)
+      - [버퍼 파티션?](#버퍼-파티션)
+        - [버퍼 파티션 개수](#버퍼-파티션-개수)
       - [해시 테이블 크기 중간 정리](#해시-테이블-크기-중간-정리)
-    - [버퍼 파티션?](#버퍼-파티션)
-      - [버퍼 파티션 개수](#버퍼-파티션-개수)
     - [해시 엘리먼트](#해시-엘리먼트)
       - [구성](#구성)
       - [엘리먼트 구성 요소](#엘리먼트-구성-요소)
@@ -120,10 +120,8 @@ stateDiagram-v2
 - `Segmented hash table`
   - 키를 해시해서 특정 규칙에 따라 메모리 공간에서 빠르게 찾아갈 수 있어서 읽기/쓰기에 좋다. 하지만 해시 충돌(hash colision) 발생 가능
   - 해시 충돌 완화 위해 해시 테이블을 *논리적인 N개의 세그먼트(해시 세그먼트)로 나누어서* 관리
-- 해시 테이블을 논리적으로
-  - `버퍼 파티션`과
-  - `해시 세그먼트`로 나눈다
-    - 각 `해시 세그먼트`는 256개의 `버킷`으로 구성된다
+- 해시 테이블은 논리적으로 `버퍼 파티션` + `해시 세그먼트`로 나눈다
+  - 각 `해시 세그먼트`는 256개의 `버킷`으로 구성된다
 
 ```mermaid
 stateDiagram-v2
@@ -333,6 +331,29 @@ init_htab(HTAB *hashp, long nelem)
 - `nsegs = next_pow2_int(nsegs);`
   - next_pow2_int(nsegs) = next_pow2_int(1024) = 1024(`1 << Math.log2(1024) = 1024`)
 
+#### 버퍼 파티션?
+
+- Shared Buffer 내에는 다음과 같은 공유 리소스가 있다
+  - 디렉토리
+  - 해시 세그먼트
+  - 해시 테이블 등
+- 공유 리소스에 여러 프로세스가 동시에 접근해서 읽고 쓰고 한다면 데이터의 일관성을 보장할 수가 없다. 따라서 모두가 접근할 수 있는 리소스에 대한 락이 필요하며, 이를 위해 `light-weight lock`을 사용한다
+- `light-weight lock`
+  - 공유 리소스는 `Light Weight(LW)` 락을 이용해서 보호 $\to$ 여러 프로세스가 마구 접근하는 것 보호
+  - Backend 프로세스가 공유 메모리 액세스 하려면 `light-weight lock`을 획득 필요 $\to$ 경합 발생으로 성능 저하 가능
+  - 오라클에서는 `Latch`라고 표현한다
+- 버퍼 파티션
+  - `light-weight lock` 경합을 줄이기 위해 해시 테이블을 버퍼 파티션으로 나누고, 나눠진 **버퍼 파티션마다 1개의 `light-weight lock`**을 할당
+
+##### 버퍼 파티션 개수
+
+- `NUM_BUFFER_PARTITIONS`
+  - 앞서 `nelem`에서 버킷의 개수를 구할 때 사용된다
+- postgres < 9.4까지는 버퍼 파티션 수가 16개로 동시성 높은 환경에서는 버퍼 파티션 액세스 시 `light-weight lock` 경합 발생 가능성이 컸다
+- postgres >= 9.5부터는
+  - 버퍼 파티션 개수를 128개로 상향 조정
+  - 버퍼 파티션 관리하는 `light-weight lock`의 개수 또한 128개로 상향 조정
+
 #### 해시 테이블 크기 중간 정리
   
 - `버퍼 수`: Share Buffer 크기에 따라 버퍼의 수가 정해지고,
@@ -344,28 +365,6 @@ init_htab(HTAB *hashp, long nelem)
     - (`최대 버킷 인덱스` $\div$ `세그먼트의 크기`) + 1
   - 마찬가지로 공간을 넉넉하게 잡아두기 위해 그 다음으로 큰 2의 지수 값을 구한다
 - `버퍼 수`, `버킷 수`, `세그먼트 수`를 가지고 해시 테이블 공간을 잡는다
-
-### 버퍼 파티션?
-
-- 공유 리소스:
-  - 디렉토리
-  - 해시 세그먼트
-  - 해시 테이블 등
-- `LW` 락
-  - 공유 리소스는 `Light Weight(LW)` 락을 이용해서 보호 $\to$ 여러 프로세스가 마구 접근하는 것 보호
-  - Backend 프로세스가 공유 메모리 액세스 하려면 `LW` 락을 획득 필요 $\to$ 경합 발생으로 성능 저하 가능
-  - 오라클에서는 `Latch`라고 표현한다
-- 버퍼 파티션
-  - `LW` 락 경합을 줄이기 위해 해시 테이블을 버퍼 파티션으로 나누고, 나눠진 **버퍼 파티션마다 1개의 `LW` 락**을 할당
-
-#### 버퍼 파티션 개수
-
-- `NUM_BUFFER_PARTITIONS`
-  - 앞서 `nelem`에서 버킷의 개수를 구할 때 사용된다
-- postgres < 9.4까지는 버퍼 파티션 수가 16개로 동시성 높은 환경에서는 버퍼 파티션 액세스 시 `light-weight lock` 경합 발생 가능성이 컸다
-- postgres >= 9.5부터는
-  - 버퍼 파티션 개수를 128개로 상향 조정
-  - 버퍼 파티션 관리하는 `LW` 락의 개수 또한 128개로 상향 조정
 
 ### 해시 엘리먼트
 
