--- a/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
+++ b/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
@@ -13,6 +13,7 @@ categories: [APSS, algorithms]
     - [분할 정복: $O(N\log{N})$](#분할-정복-onlogn)
     - [동적 계획법: $O(N)$](#동적-계획법-on)
   - [비교](#비교)
+  - [알고리즘 따른 처리량과 속도](#알고리즘-따른-처리량과-속도)
 
 # 개요
 
@@ -205,3 +206,12 @@ Execution time in nanoseconds: 129299
 - 하지만 항상 동적 계획법이 더 빠른 건 아니다.
 - 원소의 수가 적다면 오히려 *분할 정복 기법*을 사용한 `fastMaxSum`가 더 빠르다
 - 하지만 BigO 표기법에서 O(N)이 가지는 장점은 원소가 커질수록 훨씬 빨라진다는 것
+
+## 알고리즘 따른 처리량과 속도
+
+| 알고리즘      | 1초 내 처리 가능량 |                                       반복 수 |
+| ------------- | -----------------: | --------------------------------------------: |
+| $O(N^{3})$    |              2,560 |                  $2,560^{3}$ = 16,777,216,000 |
+| $O(N^{2})$    |             40,960 |                  $40,960^{2}$ = 1,677,721,600 |
+| $O(N\log{N})$ |         20,000,000 | $20,000,000\log{20,000,000}$ = 약 485,069,933 |
+| $O(N)$        |        160,000,000 |                                   160,000,000 |
