--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -20,7 +20,8 @@ categories: [APSS, algorithms]
 고등학교 수학처럼 알고리즘을 유형에 따라 그냥 외우면 편할 수도 있고, 사실 선 암기 후 이해도 좋은 학습 방법이라 생각하지만, 머리가 굵어졌는지 이제는 그게 잘 안 된다.  
 코드를 짜면서도 '난 왜 이렇게 코드를 짜지?' 같은 생각이 들면 잘 알지도 못하면서 푸는 척 하는 모습에 그냥 더이상 풀고 싶지가 않아진다.  
 
-*각종 수학적 기법*이 동원되어야 한다고 하는데, 당장 이해가 안 가더라도 정리를 할 필요성을 새삼 느낀다.
+결국 제대로 풀려면 증명에 대해 이해를 해야 하고, 그 과정에서 *각종 수학적 기법*이 동원되어야 한다고 한다.  
+당장 이해가 안 가더라도 정리를 할 필요성을 새삼 느낀다.
 
 ## 수학적 귀납법과 반복문 불변식
 
