aspp 알고리즘 정당성 - 반복문 불변식 공부

--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -72,3 +72,70 @@ while(comeCondition){
   /* 불변식은 여기에서도 성립 */
 }
 ```
+
+#### 이진 탐색과 반복문 불변식
+
+```java
+/**
+  * A[-1]은 음의 무한대, A[n]은 양의 무한대 가정
+  * @param A 오름차순으로 정렬되어 있다
+  * @param x 찾고자 하는 값
+  * @return A[i-1] < x <= A[i]인 i를 반환
+  */
+public int binarySearch(List<Integer> A, int x) {
+    int low = 0, high = A.size();
+    /* 1. 반복문 불변식: low < high */
+    /* 2. 반복문 불변식: A[low] < x <= A[high] */
+    while (low < high) { /* 3. 반복문 종료 시: low >= high */
+        int mid = low + (high - low) / 2;
+        System.out.printf("mid: %d, (%d - %d) / 2: %d\n", mid, high, low, (high - low) / 2);
+        if (A.get(mid) < x) {
+            low = mid + 1; /* 책과 다른 부분. 책은 low를 -1로 초기화 */
+        } else {
+            high = mid;
+        }
+    }
+
+    return high;
+}
+```
+
+이진 탐색 내부의 while문은 총 두 개의 반복문 불변식 유지
+
+##### $low \lt high$
+
+- 작은 값은 큰 값보다 항상 작다
+- 반복문 종료 시?
+  - $low \ge high$가 된다. 이때 $low \lt high$ 반복문 불변식과 조합을 하면,
+  - $high \le low \lt high$가 되며, low는 high일 수밖에 없다
+
+##### $A[low] \lt x \le A[high]$
+
+- `x`는 작은 인덱스보다 크고 큰 인덱스보다 작거나 같은 인덱스에 위치한다
+
+> *애초에 불변식이 성립한다고 가정했으니 이것은 당연히 성립*
+
+*`x`라는 값이 리스트 A의 low 인덱스와 high 인덱스 사이에 존재함을 가정했으니 당연히 성립한다*는 게 무슨 말일까?  
+만약 `x`에 해당하는 값이 A에 존재하지 않는다면 어떻게 될까? 불변식이 깨진다.  
+불변식에 대해 다시 상기해보자면,  
+
+> 불변식은 **반복문이 마지막에 정답을 계산하기 위해서는 항상 이 식이 변하지 않고 성립해야 하는 것**이다
+
+따라서 불변식이 성립하는 한, `x`는 A[log]와 A[high] 사이에 존재한다
+
+#### 반복문 불변식: 결론
+
+지금도 헷갈리지만, 처음보다는 조금 이해가 되는 거 같다.  
+*처음에는 왜 혼자 가정하고 그게 성립하다고 하지?*라고 생각했었다.  
+근데 이진 탐색 코드는 예제일 뿐이다. 실제로는 **알고리즘을 푸는 사람이 반복문 불변식을 가정해야** 한다.  
+즉,
+
+1. 데이터는 재귀적이든 반복문이든 어떤 반복적인 작업에 전달이 되고
+2. 알고리즘 조건과 데이터를 통해 귀납적으로 규칙을 발견하여 반복문 불변식을 가정하고
+3. 가정된 불변식에 따라 반복문 마지막에 정답을 계산해내는지 확인해야 한다
+
+따라서 정당성 검증에도 마법은 없다. 만약 귀납적인 추론이 잘못되어 잘못된 불변식을 가정하면 어떻게 될까?  
+불변식에 맞지 않는 데이터를 확인하게 되고, 불변식과 귀납 추론은 깨지게 되며, 불변식은 더이상 불변식이 아니게 된다.  
+  
+따라서 불변식을 가정할 수 있다는 것 자체가 애초에 어느 정도 문제를 풀 능력이 된다는 것...으로 이해가 된다.  
+결국 귀납 추론을 잘해서 정확한 규칙을 찾고, 규칙에 따라 불변식을 만드는 연습을 해야 할 것 같다.
