ASPP - 5. 알고리즘 정당성 증명 - toc 추가

--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -6,6 +6,20 @@ use_math: true
 categories: [APSS, algorithms]
 ---
 
+- [알고리즘 정당성 증명](#알고리즘-정당성-증명)
+  - [수학적 귀납법과 반복문 불변식](#수학적-귀납법과-반복문-불변식)
+    - [수학적 귀납법](#수학적-귀납법)
+      - [수학적 귀납법의 세 단계](#수학적-귀납법의-세-단계)
+        - [단계 나누기](#단계-나누기)
+        - [첫 단계 증명](#첫-단계-증명)
+        - [귀납 증명](#귀납-증명)
+    - [반복문 불변식(loop invariant)](#반복문-불변식loop-invariant)
+      - [반복문 불변식 증명](#반복문-불변식-증명)
+      - [이진 탐색과 반복문 불변식](#이진-탐색과-반복문-불변식)
+        - [$low \lt high$](#low-lt-high)
+        - [$A[low] \lt x \le A[high]$](#alow-lt-x-le-ahigh)
+      - [반복문 불변식: 결론](#반복문-불변식-결론)
+
 # 알고리즘 정당성 증명
 
 문제가 복잡해지면 알고리즘이 문제를 해결할 수 있는지 어떻게 알 수 있을까? 단위 테스트? 단위 테스트에 대해 책에서는 아래처럼 설명하고 있다.
