--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -18,18 +18,27 @@ categories: [APSS, algorithms]
       - [이진 탐색과 반복문 불변식](#이진-탐색과-반복문-불변식)
         - [$low \lt high$](#low-lt-high)
         - [$A[low] \lt x \le A[high]$](#alow-lt-x-le-ahigh)
+      - [삽입정렬과 반복문 불변식](#삽입정렬과-반복문-불변식)
+        - [1. 반복문 불변식: A[0..i-1]은 이미 정렬되어 있다](#1-반복문-불변식-a0i-1은-이미-정렬되어-있다)
+        - [2. 반복문 불변식: A[j + 1..i]의 모든 원소는 A[j]보다 크다](#2-반복문-불변식-aj--1i의-모든-원소는-aj보다-크다)
+        - [3. 반복문 불변식: A[0..i] 구간은 A[j]를 제외하면 정렬되어 있다](#3-반복문-불변식-a0i-구간은-aj를-제외하면-정렬되어-있다)
+        - [삽입정렬의 반복문 불변식 정리](#삽입정렬의-반복문-불변식-정리)
       - [반복문 불변식: 결론](#반복문-불변식-결론)
+  - [귀류법](#귀류법)
+    - [책장 쌓기](#책장-쌓기)
 
 # 알고리즘 정당성 증명
 
-문제가 복잡해지면 알고리즘이 문제를 해결할 수 있는지 어떻게 알 수 있을까? 단위 테스트? 단위 테스트에 대해 책에서는 아래처럼 설명하고 있다.
+문제가 복잡해지면 알고리즘이 문제를 해결할 수 있는지 어떻게 알 수 있을까? 단위 테스트?  
   
 > 단위 테스트는 알고리즘에 문제가 있음을 증명할 수는 있지만, 알고리즘에 문제가 없음을 증명할 수는 없다  
 
-예전엔 이 말이 잘 이해가 안 됐다. 그런데 어려운 문제를 풀려고 이렇게 저렇게 코드를 짜다 보면 '이게 문제를 해결할 수 있을까?'라는 생각이 든다.  
-'*내가 짜는 알고리즘에 문제가 없어서 모든 테스트 케이스를 통과할 수 있다는 것*을 어떻게 보장하지?'에 대한 자문에 자답하지 못했다.  
-그러니, 내가 짜는 알고리즘이 어디를 목표로 어떻게, 왜 그렇게 가고 있는지도 모른 채 되는대로 풀었던 셈이다.  
-풀면 다행이고, 못 풀면 그냥 그 시간 허탕친 셈. 남는 게 없진 않았지만 적었다.  
+예전엔 이 말이 잘 이해가 안 됐다. 그런데 어려운 문제를 풀려고 이렇게 저렇게 코드를 짜다 보면  
+*이 코드가 문제를 해결할 수 있을까?*라거나  
+'*내가 짜는 알고리즘에 문제가 없어서 모든 테스트 케이스를 통과할 수 있다는 것을 어떻게 보장하지?* 같은 의문이 들었다.  
+
+그러니, 내가 짜는 알고리즘이 1. 무엇을 목표로, 2. 어떻게, 3. 왜 그렇게 짜는지도 모른 채 되는대로 풀었던 셈이다.  
+풀면 다행이고, 못 풀면 그냥 그 시간 허탕친 셈이었고 남는 게 적었다.  
 
 고등학교 수학처럼 알고리즘을 유형에 따라 그냥 외우면 편할 수도 있고, 사실 선 암기 후 이해도 좋은 학습 방법이라 생각하지만, 머리가 굵어졌는지 이제는 그게 잘 안 된다.  
 코드를 짜면서도 '난 왜 이렇게 코드를 짜지?' 같은 생각이 들면 잘 알지도 못하면서 푸는 척 하는 모습에 그냥 더이상 풀고 싶지가 않아진다.  
@@ -137,6 +146,70 @@ public int binarySearch(List<Integer> A, int x) {
 
 따라서 불변식이 성립하는 한, `x`는 A[log]와 A[high] 사이에 존재한다
 
+#### 삽입정렬과 반복문 불변식
+
+- `삽입정렬`?
+  - 각 원소를 순서대로 고려하면서
+  - 이 원소를 앞에 있는 정렬된 부분 수열에
+  - 끼워넣는 작업을 반복
+
+```java
+public void insertionSort(List<Integer> A) {
+    /* 1. 반복문 불변식: A[0..i-1]은 이미 정렬되어 있다. */
+    for (int i = 0; i < A.size(); i++) {
+        /* 그렇다면 A[0..i-1]에 A[i]를 끼워넣는다. */
+        int j = i;
+        /* 2. 반복문 불변식: A[j + 1..i]의 모든 원소는 A[j]보다 크다 */
+        while (j > 0 && A.get(j - 1) > A.get(j)) { /* 불변식이 맞지 않는 데이터가 있다면? */
+            /* 불변식에 맞게 바꾼다 */
+            /* 3. 반복문 불변식: A[0..i] 구간은 A[j]를 제외하면 정렬되어 있다 */
+            Collections.swap(A, j - 1, j);
+            j--;
+        }
+    }
+}
+```
+
+##### 1. 반복문 불변식: A[0..i-1]은 이미 정렬되어 있다
+
+- 0부터 i-1이면 배열 내 전체 인덱스다. 즉, 정렬 작업 전에 이미 A가 정렬되어 있다고 가정하고 시작한다.
+- 귀류법 같은 느낌인데,
+  - 정렬되었다고 가정하고
+  - 모순되는 데이터를 찾아서
+  - 모순을 해소함으로써 가정이 맞았음을 증명한다
+
+##### 2. 반복문 불변식: A[j + 1..i]의 모든 원소는 A[j]보다 크다
+
+- 이 경우는 일종의 답정너다. 이 불변식을 지키기 위해 데이터를 바꿈으로써 정렬이 이뤄진다.
+- `while (j > 0 && A.get(j - 1) > A.get(j))` 통해 모순되는 데이터를 찾는다
+
+##### 3. 반복문 불변식: A[0..i] 구간은 A[j]를 제외하면 정렬되어 있다
+
+- 왜 j와 j-1만 비교할까? j와 j-1만 바꾸면 되나? j와 j-2, j-3 ... j-i은 비교할 필요 없나? 필요없다
+  - 왜 필요없을까? `2. 반복문 불변식: A[j + 1..i]의 모든 원소는 A[j]보다 크다`가 유지되고 있기 때문
+  - 앞선 반복문에서 만약 A[j + 1..i]보다 A[j]가 큰 경우, 즉 `A.get(j - 1) > A.get(j)`인 경우가 있다면 while문 안에서 스왑이 이뤄지고 2번 불변식이 유지된다
+  - 따라서 각 `int j = i;` 후 while문에서는 앞서 이미 검증된 j-2, j-3 등은 고려할 필요가 없다.
+- *A[j]를 제외하면 정렬* 되어 있다는 것은 무얼 의미할까?
+  - `Collections.swap`이 다른 원소들의 정렬 상태를 건드리지 않음을 의미한다
+  - 다른 원소들의 정렬 상태를 건드리지 않기 때문에, 앞서 이미 검증된 j-2, j-3 등은 정렬된 상태를 유지한다
+- 증명
+  - j = 0? A[0]은 정렬되어 있다
+  - j > 0? A[j-1] > A[j]인 경우 A[j-1]과 A[j]만 바꾸면 나머지 정렬된 것들은 변하지 않는다
+
+##### 삽입정렬의 반복문 불변식 정리
+
+1. 처음에 정렬하려는 대상이 이미 정렬되었음을 가정하고, 불변식으로 설정한다.
+2. 정렬 조건을 불변식으로 만든다.
+   - 귀납적으로 정렬은 다음과 같다
+     - $A[0] \le A[1]$
+     - $A[1] \le A[2]$
+     - $A[2] \le A[3]$
+     - ...
+     - $A[i-2] \le A[i-1]$
+     - 따라서 $A[j] \le A[j + 1..i]$가 된다
+   - $A[j] \le A[j + 1..i]$ 불변식이 유지되도록 `Collections.swap`을 한다.
+3. 이때 **이미 정렬된 다른 원소들을 변경시키지 않음** 역시 불변식으로 설정한다. 이를 통해 `Collections.swap`으로 인해 이미 정렬된 것이 변경되면, 전체 정렬이 무효화 되도록 설정한다
+
 #### 반복문 불변식: 결론
 
 지금도 헷갈리지만, 처음보다는 조금 이해가 되는 거 같다.  
@@ -151,5 +224,55 @@ public int binarySearch(List<Integer> A, int x) {
 따라서 정당성 검증에도 마법은 없다. 만약 귀납적인 추론이 잘못되어 잘못된 불변식을 가정하면 어떻게 될까?  
 불변식에 맞지 않는 데이터를 확인하게 되고, 불변식과 귀납 추론은 깨지게 되며, 불변식은 더이상 불변식이 아니게 된다.  
   
-따라서 불변식을 가정할 수 있다는 것 자체가 애초에 어느 정도 문제를 풀 능력이 된다는 것...으로 이해가 된다.  
+따라서 **어느 반복문에서 어떤 데이터가 어떻게 유지되어야 하는지**가 이미 머릿속에 있어야 한다  
+  
+그렇다면 불변식을 가정할 수 있다는 것 자체가 애초에 어느 정도 문제를 풀 능력이 된다는 것...으로 이해가 된다.  
 결국 귀납 추론을 잘해서 정확한 규칙을 찾고, 규칙에 따라 불변식을 만드는 연습을 해야 할 것 같다.
+
+## 귀류법
+
+- 원하는 바와 반대되는 상황을 가정하고 논리를 전개해서 결론이 잘못됐음을 찾아내느 증명 기법
+- 대개 어떤 선택이 항상 최선임을 증명하고자 할 때 많이 이용
+
+### 책장 쌓기
+
+- 조건
+  - $M_{i}$: 각 책장마다 버틸 수 있는 최대 무게
+  - $W_{i}$: 각 책장 자신의 무게
+  - *above(i)*: i번째 책장 위에 쌓인 모든 책장의 집합
+- 책장 위에 올라간 다른 책장들의 무게의 합 $\le$ 견딜 수 있는 최대 무게
+  - 당연히 j번째까지 책장 무게 총합이 i번째 책장이 버틸 수 있는 무게보다 작아야 한다
+
+$$(\sum_{j \in above(i)}W_{j}) \le M_{i}$$
+
+- 정렬 순서
+  - $M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다
+
+정렬 순서의 증명? 가령 아래와 같은 책장 4개가 있다고 해보자
+
+```
+   [ C ]
+[    A    ]
+  [  B  ]
+```
+
+이 경우 앞서 원하는 정렬 순서와 반대가 된다. 그럼 이 반대가 되는 사실이 잘못되었음을 찾아내면 정렬 순서가 증명된다.  
+B를 윗칸으로 옮길 경우 *A가 B의 무게까지 견딜 수 있는지*가 문제 된다.  
+
+$$
+M_{A} + W_{A} \gt M_{B} + W_{B}\\
+M_{A} \gt M_{B} + W_{B} - W_{A}
+$$
+
+이때 처음에 A 책장이 B 책장 위에 올라가 있었으므로, X를 A 위에 올라가 있는 상자들의 무게의 합이라고 할 때, 다음 공식이 성립한다
+
+$$
+M_{B} \ge W_{A} + X
+$$
+
+두 부등식을 정리하면
+
+$$
+M_{A} \gt M_{B} + (W_{B} - W_{A}) \ge W_{A} + X + (W_{B} - W_{A})\\
+M_{A} \gt X + W_{B}
+$$
