--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -26,6 +26,9 @@ categories: [APSS, algorithms]
       - [반복문 불변식: 결론](#반복문-불변식-결론)
   - [귀류법](#귀류법)
     - [책장 쌓기](#책장-쌓기)
+      - [정렬 순서의 증명](#정렬-순서의-증명)
+        - [1. A와 B의 위치를 항상 바꿀 수 있음](#1-a와-b의-위치를-항상-바꿀-수-있음)
+        - [2. A가 B의 무게를 견딜 수 있는지](#2-a가-b의-무게를-견딜-수-있는지)
 
 # 알고리즘 정당성 증명
 
@@ -240,39 +243,58 @@ public void insertionSort(List<Integer> A) {
   - $M_{i}$: 각 책장마다 버틸 수 있는 최대 무게
   - $W_{i}$: 각 책장 자신의 무게
   - *above(i)*: i번째 책장 위에 쌓인 모든 책장의 집합
-- 책장 위에 올라간 다른 책장들의 무게의 합 $\le$ 견딜 수 있는 최대 무게
-  - 당연히 j번째까지 책장 무게 총합이 i번째 책장이 버틸 수 있는 무게보다 작아야 한다
+- $\text{책장 위에 올라간 다른 책장들의 무게의 합} \le \text{견딜 수 있는 최대 무게}$.
 
-$$(\sum_{j \in above(i)}W_{j}) \le M_{i}$$
+$$\sum_{j \in above(i)}W_{j} \quad \le \;\; M_{i}$$
 
-- 정렬 순서
-  - $M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다
+정렬 순서는 $M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다
 
-정렬 순서의 증명? 가령 아래와 같은 책장 4개가 있다고 해보자
+#### 정렬 순서의 증명
+
+가령 아래와 같은 책장 4개가 있다고 해보자
 
 ```
-   [ C ]
-[    A    ]
-  [  B  ]
+    [ C ]
+[     A     ]
+  [   B   ]
 ```
 
-이 경우 앞서 원하는 정렬 순서와 반대가 된다. 그럼 이 반대가 되는 사실이 잘못되었음을 찾아내면 정렬 순서가 증명된다.  
-B를 윗칸으로 옮길 경우 *A가 B의 무게까지 견딜 수 있는지*가 문제 된다.  
+이 경우 앞서 원하는 정렬 순서인 A, B, C와는 반대가 된다. 그럼 이 반대가 되는 사실이 잘못되었음을 찾아내면 정렬 순서가 증명된다.  
 
-$$
+##### 1. A와 B의 위치를 항상 바꿀 수 있음
+
+A와 B의 위치는 항상 바꿀 수 있다. 바꾸는 것은 문제가 아니며, **바꾼 후 A가 B의 무게까지 견딜 수 있는지**가 문제 된다.  
+
+##### 2. A가 B의 무게를 견딜 수 있는지
+
+$(\text{A가 견딜 수 있는 무게} + \text{A 책장의 무게}) \gt (\text{B가 견딜 수 있는 무게} + \text{B 책장의 무게})$가 된다. 이를 부등식으로 표현하면,  
+> $$
 M_{A} + W_{A} \gt M_{B} + W_{B}\\
+$$
+
+여기서 A가 버틸 수 있는 무게만 좌변에 남긴다
+> $$
 M_{A} \gt M_{B} + W_{B} - W_{A}
 $$
 
-이때 처음에 A 책장이 B 책장 위에 올라가 있었으므로, X를 A 위에 올라가 있는 상자들의 무게의 합이라고 할 때, 다음 공식이 성립한다
+앞서 처음에 A 책장이 B 책장 위에 올라가 있었다.  
 
-$$
+```
+    [ C ]
+[     A     ]
+  [   B   ]
+```
+
+여기서 B가 버틸 수 있는 무게는 $\text{A 책장의 무게} + \text{A 책장 위 책장들의 무게}$가 되며, 이에 따르면 다음 부등식이 성립한다.  
+> $$
+X = \sum_{j \in above(A)}W_{j}\\
 M_{B} \ge W_{A} + X
 $$
 
 두 부등식을 정리하면
-
-$$
+> $$
 M_{A} \gt M_{B} + (W_{B} - W_{A}) \ge W_{A} + X + (W_{B} - W_{A})\\
 M_{A} \gt X + W_{B}
 $$
+
+X는 A 위에 올라가 있는 상자들의 무게의 합이고 $W_{B}$는 B 책장의 무게로, 두 합이 $M_{A}$보다 작으므로 A 책장은 B와 나머지 모든 책장을 지탱할 수 있다
