ASPP - 증명 기법들

--- a/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
+++ b/docs/_posts/algorithms/2021-08-24-APSS-5.verify_algorithms_valid.md
@@ -24,11 +24,16 @@ categories: [APSS, algorithms]
         - [3. 반복문 불변식: A[0..i] 구간은 A[j]를 제외하면 정렬되어 있다](#3-반복문-불변식-a0i-구간은-aj를-제외하면-정렬되어-있다)
         - [삽입정렬의 반복문 불변식 정리](#삽입정렬의-반복문-불변식-정리)
       - [반복문 불변식: 결론](#반복문-불변식-결론)
-  - [귀류법](#귀류법)
-    - [책장 쌓기](#책장-쌓기)
+  - [증명 기법들](#증명-기법들)
+    - [귀류법: 책장 쌓기](#귀류법-책장-쌓기)
       - [정렬 순서의 증명](#정렬-순서의-증명)
         - [1. A와 B의 위치를 항상 바꿀 수 있음](#1-a와-b의-위치를-항상-바꿀-수-있음)
         - [2. A가 B의 무게를 견딜 수 있는지](#2-a가-b의-무게를-견딜-수-있는지)
+    - [비둘기집의 원리](#비둘기집의-원리)
+    - [동전 뒤집기](#동전-뒤집기)
+    - [순환 소수 찾기](#순환-소수-찾기)
+    - [구성적 증명](#구성적-증명)
+    - [안정적 결혼 문제](#안정적-결혼-문제)
 
 # 알고리즘 정당성 증명
 
@@ -232,12 +237,12 @@ public void insertionSort(List<Integer> A) {
 그렇다면 불변식을 가정할 수 있다는 것 자체가 애초에 어느 정도 문제를 풀 능력이 된다는 것...으로 이해가 된다.  
 결국 귀납 추론을 잘해서 정확한 규칙을 찾고, 규칙에 따라 불변식을 만드는 연습을 해야 할 것 같다.
 
-## 귀류법
+## 증명 기법들
 
 - 원하는 바와 반대되는 상황을 가정하고 논리를 전개해서 결론이 잘못됐음을 찾아내느 증명 기법
 - 대개 어떤 선택이 항상 최선임을 증명하고자 할 때 많이 이용
 
-### 책장 쌓기
+### 귀류법: 책장 쌓기
 
 - 조건
   - $M_{i}$: 각 책장마다 버틸 수 있는 최대 무게
@@ -247,7 +252,7 @@ public void insertionSort(List<Integer> A) {
 
 $$\sum_{j \in above(i)}W_{j} \quad \le \;\; M_{i}$$
 
-정렬 순서는 $M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다
+- 정렬 순서는 $M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다
 
 #### 정렬 순서의 증명
 
@@ -297,4 +302,39 @@ M_{A} \gt M_{B} + (W_{B} - W_{A}) \ge W_{A} + X + (W_{B} - W_{A})\\
 M_{A} \gt X + W_{B}
 $$
 
-X는 A 위에 올라가 있는 상자들의 무게의 합이고 $W_{B}$는 B 책장의 무게로, 두 합이 $M_{A}$보다 작으므로 A 책장은 B와 나머지 모든 책장을 지탱할 수 있다
+X는 A 위에 올라가 있는 상자들의 무게의 합이고 $W_{B}$는 B 책장의 무게로, 두 합이 $M_{A}$보다 작으므로 A 책장***도*** B와 나머지 모든 책장을 지탱할 수 있다  
+따라서 **$M_{i}$와 $W_{i}$ 합이 가장 큰 것부터 아래에 놓는다**라는 정렬 순서로 쌓았을 때 가장 높은 탑을 얻지 못하는 경우는 존재하지 않는다.  
+
+### 비둘기집의 원리
+
+나뭇잎이 1,000개에서 10,000개인 나무가 10만 그루 존재할 때, 나뭇잎 수가 같은 나무가 존재할까? 결론부터 말하면 반드시 존재한다.  
+  
+여기서 중요한 것은 가능한 나뭇잎 수의 경우의 수와 총 나무의 개수다.  
+나뭇잎 수의 베리에이션은 1,000과 10,000 사이의 숫자가 가능하며, 가능한 나뭇잎 수의 경우는 1,000개, 1,001개, ... 10,000개로 9,001가지가 있다.  
+$$
+\left \{ \text{나뭇잎} \in \mathbb{N}| 1,000 \le \text{나뭇잎} \le 10,000 \right \}
+$$
+
+가능한 나뭇잎 수의 경우는 9,001개인데 10만 그루의 나무가 있다면, 반드시 나뭇잎 수가 같은 나무가 존재할 수밖에 없다.  
+9,001가지 경우의 수를 100,000개의 나무에 분배해야 하기 때문이다. 이를 `비둘기집의 원리(Pigeonhole Principle)`이라고 한다.  
+
+> 10마리의 비둘기가 9개의 비둘기집에 모두 들어갔다면, 2마리 이상이 들어간 비둘기 집이 반드시 하나는 있게 마련이다.
+
+처음에 생각했을 때 나뭇잎 수가 같은 나무가 존재할까? 어떻게 알지? 수를 다 세봐야 하나? 같은 생각이 떠올랐다.  
+우선 1,000, 10,000, 100,000 같은 일일이 세기 어려운 큰 숫자를 어떻게 처리할지가 걱정됐다.  
+그리고 *존재하는지 여부*를 어떻게 true 또는 false로 증명할지가 막막했다.  
+그런데 이를 `9,001가지 경우의 수를 100,000개의 나무에 분배`라고 표현하니 단번에 이해가 됐다.  
+4개씩 있는 3종류 사탕 12개를 10명이 먹으면, 두 명 이상은 반드시 같은 사탕을 먹게 된다.  
+  
+더 적은 종류의 데이터를 더 많은 수의 데이터에 분배할 경우, 같은 데이터를 돌려쓰는 경우가 생길 수밖에 없다.
+
+### 동전 뒤집기
+
+### 순환 소수 찾기
+
+### 구성적 증명
+
+- *우리가 원하는 어떤 답이 존재한다는 사실을 증명*하기 위해 사용
+- *답이 존재한다는 사실을 논증*하는 것(X), *답의 실제 사례 제시* 또는 *답을 만드는 방법을 제시*하는 증명(O)
+
+### 안정적 결혼 문제
