--- a/docs/_posts/talk/2021-08-01-talk-210804.md
+++ b/docs/_posts/talk/2021-08-01-talk-210804.md
@@ -93,6 +93,4 @@ com.service.sub
 
 Connection은 ServiceProvider를 통해 간접적으로 OAuthTemplate을 갖고 $\to$ OAuthTemplate 통해서 액세스 토큰 발급과 갱신하고 $\to$ 그 연결 정보(ConnectionData)를 API 인스턴스로 전달하고 $\to$ API 인스턴스는 연결 정보를 사용해서 API를 호출한다.
 
-개발에 마법은 없다. `단일 책임 원칙`에 따라 각 클래스가 각자의 역할을 하지만, 각자 역할을 **잘 연결**해줘야 한다. 그리고 잘 연결하기 위해서는 **잘 설계**하고 **잘 추상화** 해야 한다. **이를 얼마나 스마트하게, 즉 1.견고한데 2.좋은 퍼포먼스를 내면서도 3.내부 로직을 유연하게 수정/개선할 수 있도록 설계** 하는 것이 중요하며, 이를 위해 SOLID 원칙이 있는 게 아닌가 싶다. ~~님아 이 원칙을 벗어나지 마시오~~
-
-그렇다면 어떻게 추상화가 됐을까?
+개발에 마법은 없다. `단일 책임 원칙`에 따라 각 클래스가 각자의 역할을 하지만, 각자 역할을 **잘 연결**해줘야 한다. 그리고 잘 연결하기 위해서는 **잘 설계**하고 **잘 추상화** 해야 한다. **이를 얼마나 스마트하게, 즉 1.견고한데 2.좋은 퍼포먼스를 내면서도 3.내부 로직을 유연하게 수정/개선할 수 있도록 설계** 하는 것이 중요하며, 이를 위해 SOLID 원칙이 있는 게 아닌가 싶다.
