--- a/docs/_posts/algorithms/2021-10-28-programmers-42576.md
+++ b/docs/_posts/algorithms/2021-10-28-programmers-42576.md
@@ -6,6 +6,15 @@ use_math: true
 categories: [programmers, algorithms]
 ---
 
+- [완주하지 못한 선수](#완주하지-못한-선수)
+  - [문제](#문제)
+  - [조건](#조건)
+  - [예제](#예제)
+  - [해결](#해결)
+    - [생각](#생각)
+    - [코드](#코드)
+    - [결과](#결과)
+
 # [완주하지 못한 선수](https://programmers.co.kr/learn/courses/30/lessons/42576)
 
 ## 문제
