pgsql shared buffer

--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -13,6 +13,7 @@ categories: [db, postgres]
     - [많은 사용자가 동시 접근 시 경합 최소화](#많은-사용자가-동시-접근-시-경합-최소화)
     - [자주 사용되는 블록은 최대한 오랫동안 버퍼에 생존](#자주-사용되는-블록은-최대한-오랫동안-버퍼에-생존)
   - [Shared Buffer 구조](#shared-buffer-구조)
+    - [공유 리소스](#공유-리소스)
     - [해시 테이블](#해시-테이블)
       - [해시 테이블 크기와 해시 세그먼트](#해시-테이블-크기와-해시-세그먼트)
       - [버퍼 파티션?](#버퍼-파티션)
@@ -42,6 +43,7 @@ categories: [db, postgres]
       - [`light-weight lock`](#light-weight-lock)
         - [`light-weight lock` 획득 절차](#light-weight-lock-획득-절차)
   - [Shared Buffer에서 버퍼 읽기](#shared-buffer에서-버퍼-읽기)
+    - [Shared Buffer 내에 있는 블록 읽는 경우](#shared-buffer-내에-있는-블록-읽는-경우)
   - [기타](#기타)
     - [참고 링크](#참고-링크)
 
@@ -114,6 +116,12 @@ stateDiagram-v2
 2. 해시 테이블의 엘리먼트 및 엘리먼트 키
 3. 버퍼 디스크립터: 버퍼 상태 관리
 4. 버퍼 풀: 실제 블록을 저장
+
+### 공유 리소스
+
+- 디렉토리
+- 해시 세그먼트
+- 해시 테이블
 
 ### 해시 테이블
 
@@ -1194,6 +1202,29 @@ LWLockAcquire(LWLock *lock, LWLockMode mode)
 ```
 
 ## Shared Buffer에서 버퍼 읽기
+
+- `Shared Buffer`
+  - 해시 테이블
+    - 배열 구조
+    - Segmented 해시 테이블 구조 for 해시 충돌 최소화
+    - 논리적인 파티션 for 동시성 향상
+      - 파티션당 LW 락은 1개
+  - 해시 엘리먼트
+    - `BufferTag`에 대한 hashvalue + 다음 엘리먼트 가리키는 포인터
+      - `BufferTag`? 블록에 대한 주민등록번호
+    - 엘리먼트 키 = `BufferTag`와 버퍼 id 저장
+    - 32개의 `freeList`로 관리 for 경합 해소
+  - 버퍼 디스크립터
+    - 버퍼의 메타 정보를 관리하는 구조체 배열
+    - 배열 수 = 버퍼 수
+    - 메타 정보
+      - `refcount`
+      - `usage_count`
+      - `flags`
+      - `freeNext` 등
+  - 버퍼 풀
+
+### Shared Buffer 내에 있는 블록 읽는 경우
 
 ## 기타
 
