알고리즘 및 ES 공부

--- a/docs/_posts/algorithms/2021-11-14-programmers-42577.md
+++ b/docs/_posts/algorithms/2021-11-14-programmers-42577.md
@@ -37,9 +37,9 @@ categories: [programmers, algorithms]
 ## 조건
 
 - phone_book의 길이는 1 이상 1,000,000 이하입니다.
-  - $1 \ge phone_book.length \le 1,000,000$
+  - $1 \le phone_book.length \le 1,000,000$
 - 각 전화번호의 길이는 1 이상 20 이하입니다.
-  - $1 \ge phone_book[i] \le 20$
+  - $1 \le phone_book[i] \le 20$
 - 같은 전화번호가 중복해서 들어있지 않습니다.
 
 ## 예제
