--- a/docs/_posts/algorithms/2021-10-28-programmers-42576.md
+++ b/docs/_posts/algorithms/2021-10-28-programmers-42576.md
@@ -25,11 +25,11 @@ categories: [programmers, algorithms]
 ## 조건
 
 - 마라톤 경기에 참여한 선수의 수는 1명 이상 100,000명 이하입니다.
-  - $1 \ge participant \le 100,000$
+  - $1 \le participant \le 100,000$
 - completion의 길이는 participant의 길이보다 1 작습니다.
   - $completion.length = participant.length - 1$
 - 참가자의 이름은 1개 이상 20개 이하의 알파벳 소문자로 이루어져 있습니다.
-  - $1 \ge participant[i].length \le 20$
+  - $1 \le participant[i].length \le 20$
 - 참가자 중에는 동명이인이 있을 수 있습니다.
 
 ## 예제
