--- a/docs/_posts/algorithms/2021-12-05-programmers-42748.md
+++ b/docs/_posts/algorithms/2021-12-05-programmers-42748.md
@@ -1,5 +1,5 @@
 ---
-title: 전화번호 목록
+title: K번째 수
 author: aimpugn
 date: 2021-11-14 22:00:00+0900
 use_math: true
@@ -12,7 +12,9 @@ categories: [programmers, algorithms]
   - [예제](#예제)
   - [해결](#해결)
     - [1st](#1st)
-      - [생각](#생각)
+      - [1st 생각](#1st-생각)
+      - [1st 코드](#1st-코드)
+      - [1st 결과](#1st-결과)
 
 # [K번째수](https://programmers.co.kr/learn/courses/30/lessons/42748)
 
@@ -54,10 +56,52 @@ categories: [programmers, algorithms]
 
 ### 1st
 
-#### 생각
+#### 1st 생각
 
 - `TimSort`를 배우고 써보자
   - `Arrays.sort(T[])`를 사용하면 내부적으로 아래 조건인 경우 `TimSort` 사용
     - 배열의 크기가 $2^{13}=8192$
     - 또는 공통 풀의 병렬 레벨이 1
   - 참고로 원시 자료형에 대해서는 `java/util/DualPivotQuicksort.java` 사용
+
+#### 1st 코드
+
+```java
+public int[] solution(int[] array, int[][] commands) {
+    int arraySize = commands.length;
+    int[] answer = new int[arraySize];
+    int idx = 0;
+    for (int[] command : commands) {
+        int from = command[0] - 1;
+        int to = command[1];
+        int targetIdx = command[2];
+//            Print.byFormat("from: {0}, to:{1} targetIdx:{2}", from, to, targetIdx);
+        if ((to - from) == 1) {  // 원소가 한 개인 경우
+            answer[idx] = array[from];
+            idx++;
+            continue;
+        }
+
+        int[] partialArray = Arrays.copyOfRange(array, from, to);
+        Arrays.sort(partialArray); // 원시 자료형의 경우 DualPivotQuicksort 사용하게 된다
+//            Print.asArray(partialArray);
+        answer[idx] = partialArray[targetIdx - 1];
+        idx++;
+    }
+
+
+    return answer;
+}
+```
+
+#### 1st 결과
+
+```
+테스트 1 〉 통과 (0.33ms, 75.2MB)
+테스트 2 〉 통과 (0.32ms, 75.7MB)
+테스트 3 〉 통과 (0.35ms, 73.6MB)
+테스트 4 〉 통과 (0.35ms, 75.9MB)
+테스트 5 〉 통과 (0.33ms, 76.7MB)
+테스트 6 〉 통과 (0.34ms, 79.9MB)
+테스트 7 〉 통과 (0.36ms, 77.2MB)
+```
