--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -44,6 +44,8 @@ categories: [db, postgres]
         - [`light-weight lock` 획득 절차](#light-weight-lock-획득-절차)
   - [Shared Buffer에서 버퍼 읽기](#shared-buffer에서-버퍼-읽기)
     - [Shared Buffer 내에 있는 블록 읽는 경우](#shared-buffer-내에-있는-블록-읽는-경우)
+      - [처리 순서](#처리-순서)
+        - [`CALC_BUCKET` 함수 설명](#calc_bucket-함수-설명)
   - [기타](#기타)
     - [참고 링크](#참고-링크)
 
@@ -178,6 +180,10 @@ stateDiagram-v2
 #define DEF_SEGSIZE_SHIFT   8 /* must be log2(DEF_SEGSIZE) */
 #define DEF_DIRSIZE         256
 #define DEF_FFACTOR         1 /* default fill factor */
+
+/* Number of freelists to be used for a partitioned hash table. */
+#define NUM_FREELISTS       32
+
 ```
 
 ```c++
@@ -753,7 +759,7 @@ typedef struct buftag
 
 - 총 32비트(인덱스 0부터 시작)로 구성. 32비트를 모두 그대로 사용하기 위해 부호 없는 `UNSINGED` 사용
   - `refcount`: 0~17 bits
-  - `usage_count`: 18~21 bits
+  - `usagecount`: 18~21 bits
   - `flags`: 22~31 bits
 - `BUF_REFCOUNT_MASK`:
   - `1U`: UNSIGNED
@@ -762,12 +768,12 @@ typedef struct buftag
   - 연산 결과 262,143이 나오며, `111111111111111111`(LENGTH: 18)가 된다
 - `BUF_USAGECOUNT_MASK`:
   - `U`: UNSIGNED
-  - `0x003C0000`: `0011 1100 0000 0000 0000 0000`(LENGTH: 22): 18~21 bits 의미. `usage_count`만 남게 된다.
+  - `0x003C0000`: `0011 1100 0000 0000 0000 0000`(LENGTH: 22): 18~21 bits 의미. `usagecount`만 남게 된다.
     - `C`: 12 = `1100`
     - `3`: `0011`
 - `BUF_USAGECOUNT_ONE`
   - `1U << 18`: `100 0000 0000 0000 0000`(LENGTH: 19)
-  - 이 값 상수로 사용하면 `usage_count`의 비트 증감을 편하게 할 수 있다
+  - 이 값 상수로 사용하면 `usagecount`의 비트 증감을 편하게 할 수 있다
 - `BUF_FLAG_MASK`
   - `U`: UNSIGNED
   - `1111 1111 1100 0000 0000 0000 0000 0000`(LENGTH: 32): 22~31 bits 의미. `flags`만 남게 된다
@@ -879,7 +885,7 @@ graph LR
 
 - Shared Buffer 액세스 시 `spinlock`과 `light-weight lock`을 획득해야 한다
 
-| PostgreSQL          | Orcle   |
+| PostgreSQL          | Oracle  |
 | ------------------- | ------- |
 | `spinlock`          | `mutex` |
 | `light-weight lock` | `latch` |
@@ -1205,26 +1211,95 @@ LWLockAcquire(LWLock *lock, LWLockMode mode)
 
 - `Shared Buffer`
   - 해시 테이블
-    - 배열 구조
-    - Segmented 해시 테이블 구조 for 해시 충돌 최소화
-    - 논리적인 파티션 for 동시성 향상
-      - 파티션당 LW 락은 1개
-  - 해시 엘리먼트
-    - `BufferTag`에 대한 hashvalue + 다음 엘리먼트 가리키는 포인터
+    - 배열 구조. 해시 충돌 최소화 위해 Segmented 해시 테이블 구조를 갖는다
+    - 동시성 향상 위해 논리적인 파티션으로 나눠서 관리
+      - 논리적 파티션당 LW 락은 1개
+  - [해시 엘리먼트](#해시-엘리먼트)
+    - 경합 해소 위해 32개의 `freeList`로 관리
+    - 엘리먼트: `BufferTag`에 대한 hashvalue + 다음 엘리먼트 가리키는 포인터
       - `BufferTag`? 블록에 대한 주민등록번호
-    - 엘리먼트 키 = `BufferTag`와 버퍼 id 저장
-    - 32개의 `freeList`로 관리 for 경합 해소
-  - 버퍼 디스크립터
+        - `데이터베이스 번호`
+        - `테이블스페이스 번호`
+        - `오브젝트 번호`:  RelFileNode rnode;
+        - `fork 번호`:  ForkNumber forkNum;
+        - `블록 번호`:  BlockNumber blockNum;
+    - 엘리먼트 키 = `BufferTag` + `버퍼 id` 저장
+  - [버퍼 디스크립터](#버퍼-디스크립터)
     - 버퍼의 메타 정보를 관리하는 구조체 배열
-    - 배열 수 = 버퍼 수
+    - 버퍼 디스크립터 배열 수 == 버퍼 수
     - 메타 정보
       - `refcount`
-      - `usage_count`
+      - `usagecount`
       - `flags`
       - `freeNext` 등
   - 버퍼 풀
+- 읽으려는 블록이 Shared Buffer 내에
+  - 존재하는 경우
+  - 존재하지 않는 경우
 
 ### Shared Buffer 내에 있는 블록 읽는 경우
+
+- 전제: size(Share Buffer) = 256MiB, 로딩된 블록은 3개
+
+| 항목                    | 계산 방식                                                                           | Value            |
+| ----------------------- | ----------------------------------------------------------------------------------- | ---------------- |
+| 버퍼 수                 | 256 MiB($256 \times{1,024} \times{1,024}$) / 8 KiB($8 \times{1,024}$)               | 32,768           |
+| 버퍼 파티션 수          | `#define NUM_BUFFER_PARTITIONS  128`                                                | 128              |
+| `nelem`                 | 버퍼 수 + 버퍼 파티션 수                                                            | 32,896           |
+| `htcl-ffactor`          | `#define DEF_FFACTOR         1`                                                     | 1                |
+| 해시테이블 배열 버킷 수 | `nbuckets = next_pow2_int( (nelem - 1) / hctl->ffactor + 1 );`                      | 65,536($2^{16}$) |
+| 해시 세그먼트 크기      | `#define DEF_SEGSIZE         256`                                                   | 256              |
+| 해시 세그먼트 수        | $\text{해시테이블 배열 버킷 수} \div \text{해시 세그먼트 크기} = 2^{16} \div 2^{8}$ | 256              |
+| `freeList` 수           | `#define NUM_FREELISTS       32`                                                    | 32               |
+| 해시 엘리먼트 풀 크기   | `nelem`                                                                             | 32,896           |
+| 버퍼 디스크립터 배열    | 버퍼 수                                                                             | 32,767           |
+| 버퍼 풀 배열            | 버퍼 수                                                                             | 32,767           |
+
+- 해시 테이블 배열 버킷 수 구하는 과정
+
+> next_pow2_int( (nelem - 1) / hctl->ffactor + 1 );  
+> = next_pow2_int( ( (32896 - 1) / 1 ) + 1 )  
+> = next_pow2_int( ( (32895) / 1 ) + 1 )  
+> = next_pow2_int( ( 32895 ) + 1 )  
+> = next_pow2_int( 32896 ) // 2^15 = 32,768, 다음 2의 제곱수는 2^16  
+> = 65,536
+
+#### 처리 순서
+
+- 읽고자 하는 `BufferTag`가 `Tag_B`라고 할 경우
+
+1. `BufferTag` 생성
+   1. 생성된 `BufferTag` 이용해서 `hashvalue` 계산
+   2. 계산된 `hashvalue`를 이용해서 [버퍼 파티션](#버퍼-파티션) 번호 계산
+2. 해당 번호의 버퍼 파티션에 대한 `LW` 락을 `SHARE` 모드로 획득
+3. `hashvalue`를 이용해서 해시 테이블 버킷 번호를 계산(해시 체인 검색)
+   1. `버킷 번호` $\to$ `해시 세그먼트 번호`와 `인덱스 번호`로 치환
+   2. 해시 체인을 따라가면서 `Tag_B`를 찾는다
+4. [해시 엘리먼트](#해시-엘리먼트) `Tag_B`에는 `ID of Tag_B`가 있고, `${버퍼 디스크립터 배열['ID of Tag_B']}`에 `PIN`을 설정
+   1. 이때 `refcount + 1`, `usagecount + 1`
+5. 해당 번호의 버퍼 파티션에 대한 `LW` 락을 해제
+6. 버퍼 디스크립터 배열에 사응하는 `${버퍼 풀['ID of Tag_B']}` 내용을 읽는다
+7. `PIN` 해제하고 `refcount - 1`
+
+##### `CALC_BUCKET` 함수 설명
+
+- 위의 과정에서 3번 해시 버킷을 찾는 함수
+
+```c++
+// src/backend/utils/hash/dynahash.c
+/* Convert a hash value to a bucket number */
+static inline uint32
+calc_bucket(HASHHDR *hctl, uint32 hash_val)
+{
+ uint32  bucket;
+
+ bucket = hash_val & hctl->high_mask;
+ if (bucket > hctl->max_bucket)
+  bucket = bucket & hctl->low_mask;
+
+ return bucket;
+}
+```
 
 ## 기타
 
