--- a/docs/_posts/algorithms/2021-12-15-programmers-42895.md
+++ b/docs/_posts/algorithms/2021-12-15-programmers-42895.md
@@ -121,7 +121,7 @@ const combinations = (collection, combinationLength) => {
 
 ```
 
-#### [다이나믹 프로그래밍](https://aimpugn.github.io/algorithms/2021-06-06-PAI-ch23-0verview_dynamic_programming)
+#### [다이나믹 프로그래밍](./2021-06-06-PAI-ch23-overview_dynamic_programming)
 
 - 최적 부분 구조?
   - 부분 문제에 대한 최적 해결 방법으로 전체 문제의 최적 해결 방법을 찾을 수 있다
